<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.cloudtrust</groupId>
    <artifactId>cloudtrust-parent</artifactId>
    <version>5.0.3-SNAPSHOT</version>
    <packaging>pom</packaging>

    <scm>
        <connection>scm:git:ssh://git@github.com/cloudtrust/cloudtrust-parent</connection>
        <developerConnection>scm:git:ssh://git@github.com/cloudtrust/cloudtrust-parent</developerConnection>
        <url>https://github.com/cloudtrust/cloudtrust-parent</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>cloudtrust-common</module>
        <module>cloudtrust-test-tools</module>
        <module>kc-cloudtrust-module</module>
        <module>kc-cloudtrust-testsuite</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <keycloak.version>26.2.4</keycloak.version>

        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <jackson-core.version>2.18.2</jackson-core.version>
        <jackson-databind.version>2.18.2</jackson-databind.version>
        <systemlambda.version>1.2.1</systemlambda.version>

        <junit.version>5.11.3</junit.version>
        <junit.platform.version>1.11.3</junit.platform.version>
        <hamcrest.version>1.3</hamcrest.version>
        <version.pmd.plugin>3.14.0</version.pmd.plugin>
        <jacoco.version>0.8.12</jacoco.version>
        <spotbugs.version>4.8.6</spotbugs.version>
        <fb-contrib.version>7.6.8</fb-contrib.version>
        <findsecbugs.version>1.13.0</findsecbugs.version>
        <owasp-check.version>11.1.1</owasp-check.version>
    </properties>

    <distributionManagement>
        <repository>
            <id>project-release</id>
            <url>https://artifactory.svc.elca.ch/artifactory/prj_cloudtrust_release</url>
        </repository>
        <snapshotRepository>
            <id>project-snapshot</id>
            <url>https://artifactory.svc.elca.ch/artifactory/prj_cloudtrust_snapshot</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.cloudtrust</groupId>
                <artifactId>cloudtrust-common</artifactId>
                <version>5.0.3-SNAPSHOT</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
